# filesystem

./: CMakeLists.txt  README.md
include/filesystem/: filesystem.hpp  serializable.hpp
include/filesystem/serialisation/: array_serialization.hpp  trivially_copyable.hpp  tuple_serialization.hpp  vector_serialization.hpp
include/filesystem/serialisation/src/: filesystem.cpp  serialization.cpp
test/: CMakeLists.txt
test/src/filesystem/: array_serialiazations.cpp  filesystem.cpp  tuple_serialiazation.cpp  vectors_serialization.cpp
